feat: update index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head> CV Iryna Stanislauchyk</head>
+<head> 
+  <title>CV Iryna Stanislauchyk</title>
+</head>
   <body>
     <h1>Iryna Stanislauchyk</h1>
   </body>
