feat: update index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head> 
-<title>CV Iryna Stanislauchyk</title>
+<head>
+<title>Iryna Stanislauchyk</title>
 </head>
 <body>
-    
-    <h1>Iryna Stanislauchyk</h1>
-    
+
+<h1>Iryna Stanislauchyk</h1>
+<p>My first paragraph.</p>
+
 </body>
 </html>
-
